Started rewrite of server to use Javalin. Client takes more metadata.